name:                letsencrypt-aws
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/letsencrypt-aws#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable letsencrypt-aws
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ADL.Config
                     , ADL.Core
                     , ADL.Core.Value
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0.2.1 && < 1.1
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , bytestring >= 0.10.8.1 && < 0.11
                     , containers >= 0.5.7.1 && < 0.6
                     , scientific >= 0.3.4.10 && < 0.4
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , vector >= 0.11.0.0 && < 0.12